--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -7,7 +7,7 @@
 *.dll
 *.so
 *.dylib
-/bin
+bin/
 
 # Test binary, built with `go test -c`
 *.test
@@ -32,4 +32,4 @@ go.work.sum
 *.db
 
 # tmp
-/tmp
+tmp/
