Initial app build (#1)
* add backend

* set up server

* update mobile with basic user and recording logic

* update readme

* create claude.md

* setup db

* setup be auth

* setup be audio

* move local data to tmp dir

* use password hashing for device ID

* tidy

* add fe auth flow

* add fe audio flow

* treat device ID like a password

* update docs and scripts

* improved registration

* setup tasks

* rename mux related file/func

* store audio on device

* update message tracking

* add settings to clear local audio cache

* fix auth routing

* Update _layout.tsx

* add SafeAreaView

* update auth routing

* remove base header

* Create TODO.md

* Rework token handling

* handle token exp

* Refresh token before expiry

* Update message store and handle play state

* Update TODO.md

* Update message playing

* add message sender name

* set up docker build

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -8,8 +8,10 @@
     "scheme": "waffletalkie",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "extra": {},
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anonymous.waffle-talkie"
     },
     "android": {
       "adaptiveIcon": {
@@ -38,7 +40,8 @@
             "backgroundColor": "#000000"
           }
         }
-      ]
+      ],
+      "expo-audio"
     ],
     "experiments": {
       "typedRoutes": true,
