--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,8 +7,9 @@ PORT=8080
 # SQLite database file path
 DATABASE_PATH=./tmp/waffle-talkie.db
 
-# JWT secret key (CHANGE THIS IN PRODUCTION!)
+# JWT secret key (Use file path in deployments, env secret is for local only)
 JWT_SECRET=dev-secret-change-in-production
+JWT_SECRET_FILE=./secrets/jwt_secret
 
 # Directory for storing audio files
 AUDIO_DIRECTORY=./tmp/audio
